kubernetes/apps/elastic-system/staging/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - stg-kibana.piny940.com
      secretName: cluster-tls
  rules:
    - host: stg-kibana.piny940.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: default-kb-http
                port:
                  number: 5601
